[package]
name = "tg-astro-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
reqwest = "0.12.5"
tokio = {version = "1.38.0", features = ["full"]}
scraper = {version = "0.19.0", features = ["default"]}
chrono = "0.4.38"
once_cell = "1.19.0"
